--- a/styles.css
+++ b/styles.css
@@ -49,19 +49,17 @@ nav ul li a span {
    padding: 10px;
 }
 
-
-
 nav ul li a:hover {
     color: black;
 }
 
 .content{   
 border: 10px solid gold;
-background-color: ;
+background-color: white;
 margin-left: 20%;
   width: 80%;
   overflow-y: auto;
-  padding: 0 5%;
+  padding: 3% 5%;
  
 }
 .intro {
@@ -90,5 +88,19 @@ p{
     border-radius: 80%;
     width: 50px;
     height: 50px;
-    border: 2px solid  #859ed5;
+}
+.buttons{
+   margin-top: -256px;
+   display: flex;
+   gap: 1rem;
+}
+.buttons a{
+    border-radius: 180px;
+    border: 3px solid #859ed5;
+    padding: 15px;
+    color: black;
+    text-decoration: none;
+ }
+.buttons a:hover{
+   color:#859ed5;
 }
