--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,37 @@ p{
 .buttons a:hover{
 color:#859ed5;
 }
+h3 {
+    background-color: #859ed5 ;
+    font-weight: 200;
+    margin-bottom: 60px;
+    margin-top: -72px;
+    padding: 30px 40px;
+    margin-right: -108px;
+    margin-left: -64px;
+    font-size: 40px;
+    color: white;
+}
+.container {
+    width: 95%;
+}
+.para {
+    font-family: "Roboto", sans-serif;
+    font-size: 25.2px;
+    line-height: 43.2px;
+    margin-top: -40px;
+}
+.container span{
+    font-weight: bold;
+}
+.header3{
+    background-color: #859ed5 ;
+    font-weight: 200;
+    margin-bottom: 60px;
+    margin-top: -9px;
+    padding: 30px 40px;
+    margin-right: -67px;
+    margin-left: -64px;
+    font-size: 40px;
+    color: white;
+}
