--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
-/* *{
-    margin: 0 auto;
-    width: 87%;
-    box-sizing: inherit;
-} */
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -10,6 +6,8 @@ body {
     height: 100vh;
     overflow: hidden;
   }
+
+  /* sidebar */
 
 nav {
     background-color: #859ed5;
@@ -52,7 +50,7 @@ nav ul li a span {
 nav ul li a:hover {
     color: black;
 }
-
+/* home */
 .content{   
 background-color: white;
 margin-left: 20%;
@@ -78,6 +76,8 @@ h4 {
 p{
     font-size: 20px;
 }
+/* social icons */
+
 .social {
     padding: 10px;
     display: flex;
@@ -88,6 +88,8 @@ p{
     width: 50px;
     height: 50px;
 }
+/* buttons of choices */
+
 .buttons{
     padding-top: 15px;
    display: flex;
@@ -114,6 +116,7 @@ h3 {
     font-size: 40px;
     color: white;
 }
+/* about */
 .container {
     width: 95%;
 }
@@ -143,11 +146,12 @@ h3 {
     margin-bottom: 60px;
     margin-top: 35px;
     padding: 30px 40px;
-    margin-right: -108px;
+    margin-right: -67px;
     margin-left: -64px;
     font-size: 40px;
     color: white;
 }
+/* projects */
 .projects {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -398,5 +402,20 @@ h3 {
     color: white; 
 }
 
-            
+/* Footer Section */
+footer {
+    color: rgb(0, 0, 0); 
+    background-color:white ;
+    padding: 20px;
+    margin-top: 55px;
+    margin-right: -67px;
+    margin-left: -64px;
+    padding-bottom: 10px;
+    border-top: 2px solid #f0f0f0; 
+}
 
+footer p {
+    font-size: small;
+    margin: 0;
+    line-height: 1.3; 
+}
